<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cardconnect.Profile">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/name_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/message_margin"
        android:hint="@string/message_name" />

    <EditText
        android:id="@+id/phone_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_message"
        android:layout_marginTop="1dp"
        android:hint="@string/message_number" />

    <EditText
        android:id="@+id/email_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_message"
        android:hint="@string/message_email"/>

    <EditText
        android:id="@+id/address_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_message"

        android:hint="@string/message_address" />

    <EditText
        android:id="@+id/org_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_message"
        android:hint="@string/message_org" />
    <EditText
        android:id="@+id/pos_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/org_message"
        android:hint="@string/message_pos" />
    <EditText
        android:id="@+id/website_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pos_message"
        android:hint="@string/message_website" />
    <EditText
        android:id="@+id/notes_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/website_message"
        android:hint="@string/message_notes" />

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notes_message"
        android:layout_marginTop="54dp"
        android:text="@string/message_save" />


</RelativeLayout>