<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                tools:context="com.example.cardconnect.MainActivity">



    <Button
        android:id="@+id/btn_write"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true"
        android:text="@string/message_write_tag"
        android:background="@drawable/round_rect_button"

        />

    <Button
            android:id="@+id/btn_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_write"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_centerInParent="true"
            android:text="@string/message_read_tag"
            android:background="@drawable/round_rect_button"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:id="@+id/btn_profile"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="168dp"
        android:layout_height="164dp"
        android:layout_below="@+id/btn_read"
        android:layout_centerInParent="true"
        android:layout_marginTop="-305dp"
        android:background="@drawable/round_button"
        android:text="@string/message_profile" />


    <Button
        android:id="@+id/btn_contacts"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true"
        android:text="@string/message_contacts"
        android:background="@drawable/round_rect_button"
        android:layout_below="@+id/btn_read"
        />


</RelativeLayout>