<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cardconnect.viewContacts">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar"/>



    <Button
        android:id="@+id/btn_export_contact"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_info"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="20dp"
        android:text="@string/message_export_contact" />

    <Button
        android:id="@+id/btn_edit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_export_contact"
        android:layout_marginTop="-48dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="155dp"
        android:text="@string/message_edit" />

    <Button
        android:id="@+id/btn_delete"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_edit"
        android:layout_marginTop="-48dp"
        android:layout_marginLeft="250dp"
        android:text="@string/message_delete" />

    <TextView
        android:id="@+id/contact_info"
        android:layout_width="286dp"
        android:layout_height="377dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="@dimen/message_margin"
        android:textColor="#1E1E1E"
        android:textSize="17sp" />


</RelativeLayout>